laptop screen done

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcR11AmTQZImMGxu2ipobVMUJ3rdhkMa9L88sBdDOPQbsu_yPGDj" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Anjana Kushwaha</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
